# adminpanel

./: package-lock.json  package.json
src/: App.css  App.js  DatasetPage.jsx  Home.js  Login.jsx  Loginpanel.jsx  Newuser.css  Newuser.jsx  PassReset.jsx  PricingPlan.jsx  Register.jsx  Sidebar.css  Sidebar.jsx  SubComp.jsx  Subs.jsx  User.css  User.jsx  UserStatus.jsx  adminpanel.jsx  dummyData.js  home.css  index.css  index.js  newfis.jsx  style.css  userList.css  userList.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: LogReg.rs  SMTP_EZH.rs  Subscriptions.rs  main.rs
