[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.4", features = [] }
anyhow = "1"
serde = "1.0.158"
serde_json = "1.0.94"
serde_derive = "1.0.158"
firebase-rs = "2.0.6"
tokio = {version = "1.26.0", features = ["full"] } 
sha256 = "1.1.2"
lettre = "0.10.4"
rand = "0.8.5"
reqwest = "0.11.16"
chrono = "0.4.24"
rust-bert = "0.20.0"
uuid = "1.3.2"
env_logger = "0.10.0"
log = "0.4.17"
pdfium-render = "0.8.3"
image = "0.24.6"
base64 = "0.21.0"
json = "0.12.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
